RESOLVED FIXED34226
[v8]: Regression: onunload event handling
https://bugs.webkit.org/show_bug.cgi?id=34226
Summary [v8]: Regression: onunload event handling
John Abd-El-Malek
Reported 2010-01-27 13:39:00 PST
(from http://code.google.com/p/chromium/issues/detail?id=33242) If a page removes an iframe using removeChild and that frame sleeps in its unload handler, then when we terminate JS, we'll also terminate the outer page's JS. Dimitri suggested throwing an exception instead.
Attachments
Proposed patch (6.68 KB, patch)
2010-01-27 14:27 PST, John Abd-El-Malek
dglazkov: review-
Renamed both tests to use dashes (11.21 KB, patch)
2010-01-27 15:56 PST, John Abd-El-Malek
no flags
John Abd-El-Malek
Comment 1 2010-01-27 14:27:46 PST
Created attachment 47563 [details] Proposed patch
Dimitri Glazkov (Google)
Comment 2 2010-01-27 14:30:17 PST
Comment on attachment 47563 [details] Proposed patch I think this is a much gentler, kinder version of the change. I like it. Small nit: can you convert the file name of the test to dashes? We don't really use underscores.
John Abd-El-Malek
Comment 3 2010-01-27 15:56:52 PST
Created attachment 47569 [details] Renamed both tests to use dashes
Dimitri Glazkov (Google)
Comment 4 2010-01-27 15:57:57 PST
Comment on attachment 47569 [details] Renamed both tests to use dashes ok.
WebKit Commit Bot
Comment 5 2010-01-27 17:41:38 PST
Comment on attachment 47569 [details] Renamed both tests to use dashes Clearing flags on attachment: 47569 Committed r53965: <http://trac.webkit.org/changeset/53965>
WebKit Commit Bot
Comment 6 2010-01-27 17:41:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.