2010-01-27  John Abd-El-Malek  <jam@chromium.org>

Reviewed by Dimitri Glazkov.

        Tests that when a page removes an iframe that sleeps in its unload handler and
        terminates its JS execution, the outer page's JS continues running.

        https://bugs.webkit.org/show_bug.cgi?id=34226

        * fast/dom/Window/slow-unload-handler-expected.txt: Copied from LayoutTests/fast/dom/Window/slow_unload_handler-expected.txt.
        * fast/dom/Window/slow-unload-handler-only-frame-is-stopped.html: Added.
        * fast/dom/Window/slow-unload-handler-only-frame-is-stopped-expected.txt: Added.
        * fast/dom/Window/slow-unload-handler.html: Copied from LayoutTests/fast/dom/Window/slow_unload_handler.html.
        * fast/dom/Window/slow_unload_handler-expected.txt: Removed.
        * fast/dom/Window/slow_unload_handler.html: Removed.
        * platform/gtk/Skipped:
        * platform/mac/Skipped:
        * platform/qt/Skipped:
        * platform/win/Skipped:
2010-01-27  John Abd-El-Malek  <jam@chromium.org>

        Reviewed by Dimitri Glazkov.

        Tests that when a page removes an iframe that sleeps in its unload handler and
        terminates its JS execution, the outer page's JS continues running.

        https://bugs.webkit.org/show_bug.cgi?id=34226

        Tests: fast/dom/Window/slow-unload-handler-only-frame-is-stopped.html
               fast/dom/Window/slow-unload-handler.html

        * bindings/v8/DateExtension.cpp:
        (WebCore::DateExtension::OnSleepDetected):

Canonical link: https://commits.webkit.org/45347@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53965 268f45cc-cd09-0410-ab3c-d52691b4dbfc